recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: ';' expected but symbol literal found.
	shrink*length à l'étage N+1
                         ^